# talu

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  POLICY.md  README.md  RELEASE.md  build.zig  py-profile.md  windows-build.md
bindings/python/: AGENTS.md  LICENSE  Makefile  POLICY.md  README.md  conftest.py  pyproject.toml  test.py  uv.toml
bindings/python/ci/: build_hook.py
bindings/python/talu/: __init__.py  _bindings.py  _logging.py  _progress.py  client.py  converter.py  profile.py  repository.py
bindings/python/talu/chat/: __init__.py  _bindings.py  _chat_base.py  _generate.py  _message_list.py  _policy.py  api.py  hooks.py  items.py
bindings/python/talu/chat/response/: __init__.py  format.py  hydrate.py  metadata.py  types.py
bindings/python/talu/chat/session/: __init__.py  async_.py  sync.py
bindings/python/talu/chat/tools/: __init__.py  decorator.py  schema.py  types.py
bindings/python/talu/db/: __init__.py  _bindings.py  backends.py  event.py  types.py
bindings/python/talu/exceptions/: __init__.py  exceptions.py
bindings/python/talu/file/: __init__.py  _bindings.py  _pipeline.py  _types.py
bindings/python/talu/router/: __init__.py  _bindings.py  remote.py  router.py  spec.py
bindings/python/talu/router/config/: __init__.py  completion.py  generation.py  grammar.py
bindings/python/talu/template/: __init__.py  _bindings.py  config.py  environment.py  filters.py  loaders.py  presets.py  prompt.py  results.py
bindings/python/talu/tokenizer/: __init__.py  _bindings.py  batch.py  special_tokens.py  template.py  token_array.py  tokenizer.py
bindings/python/talu/train/: __init__.py  _bindings.py  _full_bindings.py  full_session.py  session.py
bindings/python/talu/types/: __init__.py  events.py  items.py  records.py
bindings/python/talu/validate/: __init__.py  _bindings.py  validator.py
bindings/python/talu/xray/: __init__.py  _bindings.py  inspector.py
bindings/python/tests/: __init__.py  check_coverage.py  conftest.py  discovery.py
bindings/python/tests/chat/: __init__.py  conftest.py  test_api.py  test_code_blocks.py  test_items.py
bindings/python/tests/client/: test_client_coverage.py  test_client_init.py
bindings/python/tests/compat/: __init__.py  test_imports.py
bindings/python/tests/converter/: __init__.py  conftest.py  test_alignment.py  test_api.py  test_assets.py  test_bindings.py  test_converter.py  test_formats.py  test_inspector.py  test_platform_quant.py  test_sharding.py  test_verification.py
bindings/python/tests/db/: __init__.py  test_database.py  test_documents.py
bindings/python/tests/exceptions/: __init__.py  test_exceptions.py
bindings/python/tests/file/: __init__.py  conftest.py  test_document.py  test_image.py  test_inspect.py  test_pipeline.py
bindings/python/tests/fixtures/: __init__.py  paths.py  storage.py
bindings/python/tests/log/: __init__.py  test_config.py  test_formatters.py
bindings/python/tests/memory/: __init__.py  conftest.py  test_buffer_ownership.py  test_callback_lifetime.py  test_config_references.py  test_error_path_cleanup.py  test_result_cleanup.py  test_stress.py
bindings/python/tests/profile/: __init__.py  test_profile.py
bindings/python/tests/progress/: __init__.py  test_progress.py
bindings/python/tests/reference/: conftest.py
bindings/python/tests/repository/: __init__.py  conftest.py  test_edge_cases.py  test_fetch_file.py  test_repository.py
bindings/python/tests/router/: __init__.py  test_remote.py  test_remote_routing_contract.py  test_router.py  test_router_errors.py  test_spec.py  test_stop_flag.py  test_tool_calls.py
bindings/python/tests/talu_profile/: __init__.py
bindings/python/tests/talu_types/: __init__.py  test_events.py  test_items.py  test_multimodal_content.py  test_records.py
bindings/python/tests/template/: __init__.py  conftest.py  test_ai_patterns.py  test_basic.py  test_chat_template.py  test_concurrency.py  test_config.py  test_control_flow.py  test_custom_filters.py  test_edge_cases.py  test_environment.py  test_errors.py  test_filters.py  test_functions.py  test_jinja2_compat.py  test_loaders.py  test_operators.py  test_parse_functions.py  test_presets.py  test_prompt.py  test_prompt_engineering.py  test_required_optional.py  test_results.py  test_robustness.py  test_template.py
bindings/python/tests/tokenizer/: __init__.py  conftest.py  test_batch.py  test_minimal_tokenizer.py  test_model_max_length.py  test_normalizer.py  test_special_tokens.py  test_special_tokens_contract.py  test_special_tokens_mixin.py  test_template.py  test_template_coverage.py  test_thread_safety.py  test_token_array_coverage.py  test_tokenizer.py
bindings/python/tests/train/: __init__.py  test_full_session.py  test_session.py
bindings/python/tests/types/: __init__.py  test_events.py  test_items.py  test_records.py
bindings/python/tests/validate/: __init__.py  test_schema_types.py  test_streaming.py  test_strict_mode.py  test_validator.py
bindings/python/tests/xray/: __init__.py  test_bindings.py  test_inspector.py  test_inspector_coverage.py  test_inspector_mocked.py
bindings/rust/cli/: Cargo.toml  build.rs
bindings/rust/cli/src/: bucket_settings.rs  config.rs  lib.rs  model_selector.rs  pin_store.rs  provider.rs  quant_scheme.rs  tui_common.rs
bindings/rust/cli/src/cli/: db.rs  (+13 more)
bindings/rust/cli/tests/: api_compliance.rs  build_version.rs  documents_api.rs  server.rs
bindings/rust/talu/: Cargo.toml  README.md  build.rs
bindings/rust/talu-sys/: Cargo.toml  README.md  build.rs
bindings/rust/talu-sys/src/: lib.rs
bindings/rust/talu/benches/: Makefile  README.md
bindings/rust/talu/examples/: bench_prep.rs
bindings/rust/talu/src/: batch.rs  blobs.rs  collab.rs  convert.rs  documents.rs  error.rs  file.rs  fs.rs  kv.rs  lib.rs  logging.rs  model.rs  plugins.rs  policy.rs  process.rs  provider.rs  repo.rs  repo_meta.rs  responses.rs  router.rs  shell.rs  sql.rs  storage.rs  table.rs  treesitter.rs  vector.rs  wrappers.rs  xray.rs
bindings/rust/talu/tests/: capi.rs  model_perf_hints.rs  vector_mutations.rs
(+2650 files in other folders)
