[package]
name = "talu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for talu LLM inference"
publish = false

[lib]
name = "talu_cli"
crate-type = ["rlib", "staticlib"]

[dependencies]
talu = { path = "../talu" }
anyhow.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.18.3"
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "sync", "signal", "macros"] }
tokio-stream = "0.1"
utoipa = "5"
toml = "0.9"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
