[package]
name = "talu-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level FFI bindings for libtalu"
links = "talu"
readme = "README.md"
categories = ["external-ffi-bindings"]
keywords = ["talu", "llm", "inference"]

[build-dependencies]
