[package]
name = "talu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe, idiomatic Rust SDK for talu LLM inference"

[dependencies]
talu-sys = { path = "../talu-sys" }
thiserror.workspace = true
serde_json = "1"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
toml = "0.9"
dirs = "6"
getrandom = "0.3"
regex = "1"

[[bench]]
name = "search"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "api"
harness = false

[[bench]]
name = "rag"
harness = false
